# spore-host

./: .gitignore  .goreleaser.yaml  .semgrepignore  CHANGELOG.md  CLAUDE.md  Dockerfile  Makefile  README.md  go.mod
.claude/agents/: infra-explorer.md
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  docker.yml  docs.yaml  e2e-tests.yml  security.yml  substrate-tests.yml
docs/: how-it-works.md  index.md  package-lock.json  package.json  quickstart.md  spore-bot-self-hosting.md
docs/.vitepress/: config.mts
docs/features/: spored-agent.md
docs/guides/: batch-queue.md  discord-setup.md  finding-instances.md  first-instance.md  go-library.md  gpu-training.md  index.md  installation.md  job-arrays.md  jupyter.md  mcp-setup.md  mpi.md  nextflow.md  notifications.md  parameter-sweeps.md  pipelines.md  plugins.md  python-sdk.md  self-hosting.md  slack-setup.md  spot-instances.md  teams-setup.md
docs/reference/: cheatsheet.md  configuration.md  ec2-tags.md  environment-variables.md  faq.md  iam-permissions.md  index.md  lifecycle-events.md
docs/tools/: index.md  lagotto.md  mcp-server.md  spawn.md  (+3 more)
infra/: DEPLOY.md
lagotto/: go.mod  go.sum  integration_test.go  main.go
mcp/: go.mod  go.sum  main.go  spawn.go  truffle.go
scripts/: register-discord-commands.sh
sdk/python/: pyproject.toml
spawn/: Makefile  WORKFLOW_INTEGRATION.md  go.mod  go.sum  main.go
truffle/: BUILD.md  go.mod  go.sum  main.go
web/: dashboard.html  index.html  library.html  privacy.html  terms.html
(+285 files in other folders)
